# rust_aws_sam_local

./: .gitignore  Cargo.toml  build_and_run_sam.sh
sam/: template.yml  test.json
src/: hello.go  main.rs
