[package]
name = "aws_lambda"
version = "0.1.0"
authors = ["komekome09 <fanmaskome@gmail.com>"]
autobins = false
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = {version = "1.0", features = ["macros", "io-util", "sync", "rt-multi-thread"] }
serde = {version = "1", features = ["derive"]}
serde_json = "^1"
lambda_runtime = "0.4"
reqwest = { version = "0.11", features = ["json", "rustls-tls"] }
log = "0.4"
simple_logger = "1"
simple-error = "0.2"
rustls = "0.19"
scraper = "0.12"
slack_api = "0.23.0"

[[bin]]
name = "bootstrap"
path = "src/main.rs"
